Creacion y actualizacion de un record de tipo A

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -18,6 +18,8 @@
         "errors.h": "c",
         "cloudflare.h": "c",
         "parameters.h": "c",
-        "type_traits": "c"
+        "type_traits": "c",
+        "typeinfo": "c",
+        "compare": "c"
     }
 }
